[versioneer]
VCS = git
style = pep440
versionfile_source = pert_belly_hack/_version.py
versionfile_build = pert_belly_hack/_version.py
tag_prefix =
parentdir_prefix = pert_belly_hack-

[devpi:upload]
no-vcs = 1

[nosetests]
verbosity = 3
with-doctest = 1
# nologcapture = 1
nocapture = 1

with-coverage = 1
cover-html = 1
cover-html-dir = pages_out/cover
cover-erase = 1
cover-package=plugin
#cover-inclusive = 1
#cover-xml = 1

with-xunit = 1
xunit-file = pages_out/nosetests.xml

[metadata]
description-file = README.rst
